--- a/index.html
+++ b/index.html
@@ -1,1 +1,161 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Finance Manager</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        #chartContainer {
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>Personal Finance Manager</h1>
+
+    <form id="transactionForm">
+        <label for="description">Description:</label>
+        <input type="text" id="description" required>
+
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" required>
+
+        <label for="category">Category:</label>
+        <select id="category">
+            <option value="Food">Food</option>
+            <option value="Stationary">Stationary</option>
+            <option value="Medicines">Medicines</option>
+            <option value="Personal Usage">Personal Usage</option>
+            <option value="Transportation">Transportation</option>
+            <option value="Bills">Bills</option>
+            <option value="Others">Others</option>
+        </select>
+
+        <button type="submit">Add Transaction</button>
+    </form>
+
+    <input type="text" id="search" placeholder="Search transactions...">
+
+    <table>
+        <thead>
+            <tr>
+                <th>Description</th>
+                <th>Amount</th>
+                <th>Category</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="transactionTable">
+            <!-- Transactions will be dynamically added here -->
+        </tbody>
+    </table>
+
+    <div id="chartContainer">
+        <canvas id="categoryChart"></canvas>
+    </div>
+
+    <script>
+        const transactions = [];
+        const categories = { 
+            Food: 0, 
+            Stationary: 0, 
+            Medicines: 0, 
+            "Personal Usage": 0, 
+            Transportation: 0, 
+            Bills: 0, 
+            Others: 0 
+        };
+
+        const form = document.getElementById('transactionForm');
+        const tableBody = document.getElementById('transactionTable');
+        const searchInput = document.getElementById('search');
+        const categoryChart = new Chart(document.getElementById('categoryChart'), {
+            type: 'pie',
+            data: {
+                labels: Object.keys(categories),
+                datasets: [{
+                    label: 'Category Breakdown',
+                    data: Object.values(categories),
+                    backgroundColor: ['#ff6384', '#36a2eb', '#ffcd56', '#4bc0c0', '#9966ff', '#ff9f40', '#c9cbcf']
+                }]
+            }
+        });
+
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            const description = document.getElementById('description').value;
+            const amount = parseFloat(document.getElementById('amount').value);
+            const category = document.getElementById('category').value;
+
+            transactions.push({ description, amount, category });
+            categories[category] += amount;
+
+            updateTable();
+            updateChart();
+            form.reset();
+        });
+
+        searchInput.addEventListener('input', () => {
+            updateTable(searchInput.value);
+        });
+
+        function updateTable(filter = '') {
+            tableBody.innerHTML = '';
+            transactions
+                .filter(t => t.description.toLowerCase().includes(filter.toLowerCase()))
+                .forEach((t, index) => {
+                    const row = document.createElement('tr');
+
+                    row.innerHTML = `
+                        <td>${t.description}</td>
+                        <td>${t.amount.toFixed(2)}</td>
+                        <td>${t.category}</td>
+                        <td><button onclick="deleteTransaction(${index})">Delete</button></td>
+                    `;
+
+                    tableBody.appendChild(row);
+                });
+        }
+
+        function deleteTransaction(index) {
+            const category = transactions[index].category;
+            const amount = transactions[index].amount;
+
+            categories[category] -= amount;
+            transactions.splice(index, 1);
+
+            updateTable();
+            updateChart();
+        }
+
+        function updateChart() {
+            categoryChart.data.datasets[0].data = Object.values(categories);
+            categoryChart.update();
+        }
+    </script>
+</body>
+</html>
 
