--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yashika Tidke's Personal Finance Manager</title>
+    <title>Personal Finance Manager</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
@@ -109,7 +109,7 @@
     </style>
 </head>
 <body>
-    <h1>Personal Finance Manager</h1>
+    <h1>Yashika Tidke's Personal Finance Manager</h1>
 
     <form id="transactionForm">
         <label for="description">Description:</label>
